--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "gatsby": "^2.32.3",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
