--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "tailwindcss": "^2.0.3",
     "tailwindcss-textshadow": "^2.1.3",
     "twin.macro": "^2.2.3"
