--- a/package.json
+++ b/package.json
@@ -15,38 +15,38 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^2.32.3",
-    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby": "^3.0.0-next.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-mailchimp-subscribe": "^2.1.3",
-    "tailwindcss": "^2.0.3",
+    "tailwindcss": "^2.0.4",
     "tailwindcss-textshadow": "^2.1.3",
-    "twin.macro": "^2.2.3"
+    "twin.macro": "^2.3.1"
   },
   "devDependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-wesbos": "^1.0.1",
-    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-emotion": "^5.4.0",
-    "gatsby-plugin-postcss": "^3.7.0",
-    "postcss": "^8.2.6",
+    "gatsby-plugin-emotion": "^6.1.0",
+    "gatsby-plugin-postcss": "^4.1.0",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1"
   }
 }
