--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "book-of-hanz-content"]
 	path = book-of-hanz-content
-	url = https://github.com/fate-srd/book-of-hanz-content
+	url = git@github.com:fate-srd/book-of-hanz-content.git
