--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-remark": "^3.1.0",
+    "gulp": "^4.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "tailwindcss": "^2.1.2",
     "tailwindcss-textshadow": "^2.1.3",
+    "turndown": "^7.0.0",
     "twin.macro": "^2.3.1"
   },
   "devDependencies": {
