--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^3.0.0-next.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-umami": "^0.1.3",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-remark": "^3.1.0",
