--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "gatsby": "^3.0.0-next.0",
+    "gatsby-plugin-fathom": "^2.1.1",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-umami": "^0.1.3",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-remark": "^3.1.0",
+    "graphql": "^15.10.1",
     "gulp": "^4.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
